--- a/Demo/Fleet/Fleet/ClientApp/src/app/pages/home/home.component.html
+++ b/Demo/Fleet/Fleet/ClientApp/src/app/pages/home/home.component.html
@@ -1,14 +1,15 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-8">
-      <div class="card">
-        <div class="card-body text-center">
+<bs-grid>
+  <div bsRow class="justify-content-center">
+    <div [md]="8">
+      <bs-card>
+        <bs-card-header>{{ 'welcomeTitle' | t }}</bs-card-header>
+        <div class="p-3 text-center">
           <h1 class="display-4">{{ 'welcomeTitle' | t }}</h1>
           <p class="lead">{{ 'welcomeSubtitle' | t }}</p>
           <hr>
           <p>{{ 'selectMenuItem' | t }}</p>
         </div>
-      </div>
+      </bs-card>
     </div>
   </div>
-</div>
+</bs-grid>
