--- a/node_packages/ng-spark/src/lib/components/po-detail/spark-po-detail.component.html
+++ b/node_packages/ng-spark/src/lib/components/po-detail/spark-po-detail.component.html
@@ -35,43 +35,46 @@
       </bs-button-group>
     </div>
 
-    <bs-card>
-      <bs-card-header>{{ 'details' | t }}</bs-card-header>
-      <div class="p-3">
-        <bs-grid>
-          @if (showTabs()) {
-            <bs-tab-control>
-              @for (tab of resolvedTabs(); track tab.id) {
-                <bs-tab-page>
-                  <ng-template bsTabPageHeader>{{ tab.label | resolveTranslation:tab.name }}</ng-template>
-                  <div class="pt-3">
-                    <ng-container *ngTemplateOutlet="detailTabContent; context: { $implicit: tab }"></ng-container>
-                  </div>
-                </bs-tab-page>
-              }
-            </bs-tab-control>
-          } @else {
-            @for (tab of resolvedTabs(); track tab.id) {
-              <ng-container *ngTemplateOutlet="detailTabContent; context: { $implicit: tab }"></ng-container>
-            }
-          }
+    <bs-grid>
+      <bs-tab-control>
+        @for (tab of resolvedTabs(); track tab.id) {
+          <bs-tab-page>
+            <ng-template bsTabPageHeader>{{ tab.label | resolveTranslation:tab.name }}</ng-template>
+            <ng-container *ngTemplateOutlet="detailTabContent; context: { $implicit: tab }"></ng-container>
+          </bs-tab-page>
+        }
+      </bs-tab-control>
 
-          <ng-template #detailTabContent let-tab>
-            @for (group of groupsForTab(tab); track group.id) {
-              @if (attrsForGroup(group); as groupAttrs) {
-                @if (groupAttrs.length > 0) {
-                  @if (group.label) {
-                    <h6 class="mt-3 mb-2 text-muted border-bottom pb-1">{{ group.label | resolveTranslation:group.name }}</h6>
-                  }
+      <ng-template #detailTabContent let-tab>
+        @if (tab.id === '__default__') {
+          @let ungroupedAttrs = ungroupedAttributes();
+          @if (ungroupedAttrs.length > 0) {
+            <dl bsRow>
+              @for (attr of ungroupedAttrs; track attr.id) {
+                <ng-container *ngTemplateOutlet="detailAttrField; context: { $implicit: attr, item: currentItem }"></ng-container>
+              }
+            </dl>
+          }
+        }
+        @for (group of groupsForTab(tab); track group.id) {
+          @if (attrsForGroup(group); as groupAttrs) {
+            @if (groupAttrs.length > 0) {
+              <bs-card style="display: block; margin: 1rem;">
+                @if (group.label) {
+                  <bs-card-header>{{ group.label | resolveTranslation:group.name }}</bs-card-header>
+                }
+                <div class="p-3">
                   <dl bsRow>
                     @for (attr of groupAttrs; track attr.id) {
                       <ng-container *ngTemplateOutlet="detailAttrField; context: { $implicit: attr, item: currentItem }"></ng-container>
                     }
                   </dl>
-                }
-              }
+                </div>
+              </bs-card>
             }
-          </ng-template>
+          }
+        }
+      </ng-template>
 
           <ng-template #detailAttrField let-attr let-currentItem="item">
               <dt [sm]="3">{{ (attr.label | resolveTranslation) || attr.name }}</dt>
@@ -141,9 +144,7 @@
               }
               </dd>
           </ng-template>
-        </bs-grid>
-      </div>
-    </bs-card>
+    </bs-grid>
     @if (extraContentTemplate(); as extraContentTpl) {
       <ng-container *ngTemplateOutlet="extraContentTpl; context: { $implicit: currentItem, entityType: et }"></ng-container>
     }
