--- a/node_packages/ng-spark/src/lib/components/po-form/spark-po-form.component.html
+++ b/node_packages/ng-spark/src/lib/components/po-form/spark-po-form.component.html
@@ -1,33 +1,34 @@
 <bs-form>
   @if (entityType()) {
     <bs-grid>
-    @if (showTabs()) {
       <bs-tab-control>
         @for (tab of resolvedTabs(); track tab.id) {
           <bs-tab-page>
             <ng-template bsTabPageHeader>{{ tab.label | resolveTranslation:tab.name }}</ng-template>
-            <div class="pt-3">
-              <ng-container *ngTemplateOutlet="tabContent; context: { $implicit: tab }"></ng-container>
-            </div>
+            <ng-container *ngTemplateOutlet="tabContent; context: { $implicit: tab }"></ng-container>
           </bs-tab-page>
         }
       </bs-tab-control>
-    } @else {
-      @for (tab of resolvedTabs(); track tab.id) {
-        <ng-container *ngTemplateOutlet="tabContent; context: { $implicit: tab }"></ng-container>
-      }
-    }
 
     <ng-template #tabContent let-tab>
+      @if (tab.id === '__default__') {
+        @for (attr of ungroupedAttributes(); track attr.id) {
+          <ng-container *ngTemplateOutlet="attrField; context: { $implicit: attr }"></ng-container>
+        }
+      }
       @for (group of groupsForTab(tab); track group.id) {
         @if (attrsForGroup(group); as groupAttrs) {
           @if (groupAttrs.length > 0) {
-            @if (group.label) {
-              <h6 class="mt-3 mb-2 text-muted border-bottom pb-1">{{ group.label | resolveTranslation:group.name }}</h6>
-            }
-            @for (attr of groupAttrs; track attr.id) {
-              <ng-container *ngTemplateOutlet="attrField; context: { $implicit: attr }"></ng-container>
-            }
+            <bs-card style="display: block; margin: 1rem;">
+              @if (group.label) {
+                <bs-card-header>{{ group.label | resolveTranslation:group.name }}</bs-card-header>
+              }
+              <div class="p-3">
+                @for (attr of groupAttrs; track attr.id) {
+                  <ng-container *ngTemplateOutlet="attrField; context: { $implicit: attr }"></ng-container>
+                }
+              </div>
+            </bs-card>
           }
         }
       }
